# solitaire

./: Cargo.toml  README.md
src/: card.rs  deck.rs  lib.rs  main.rs  textbyte.rs
