[package]
name = "solitaire"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.8"
lazy_static = "1.4"
rand = "0.7"
regex = "1.3"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.5"
